--- a/important_documents.html
+++ b/important_documents.html
@@ -54,106 +54,69 @@
 
     <!-- Virtual Tour -->
     <section class="map-responsive">
-        <h1>Items</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ea, esse cupiditate, sapiente modi ducimus
-            accusamus quisquam provident eligendi rerum corporis sequi facere atque obcaecati ipsam dolorem ut nesciunt
-            et?</p>
         <iframe
             src="https://www.google.com/maps/embed?pb=!4v1630292668275!6m8!1m7!1sCAoSLEFGMVFpcE5SZTBST1FoLURwMHFtSzY0ZzVTbkt0MGFQeGhXZzJVNXhWY3VT!2m2!1d29.9431497!2d-90.0703166!3f194.96785!4f17.10611!5f0.7820865974627469"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
-    <!-- Exhibition Content -->
-    <section class="items">
-        <h1>Items</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ea, esse cupiditate, sapiente modi ducimus
-            accusamus quisquam provident eligendi rerum corporis sequi facere atque obcaecati ipsam dolorem ut nesciunt
-            et?</p>
-
-        <div class="exh-row">
-            <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
-            </div>
-
-            <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
-            </div>
-
-            <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Exhibtion Images -->
-    <section class="exh-img">
-        <h1>Exhibitions</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat assumenda sit ipsa labore sapiente ullam vel
-            iure eos molestias, incidunt cum quasi eligendi? Odio quis excepturi, obcaecati asperiores quam accusantium!
-        </p>
-
-        <div class="exh-row">
-            <div class="exh-img-col">
-                <img src="images/anne.jpg">
-                <div class="layer">
-                    <h3>ANNE FRANK'S DIARY</h3>
-                </div>
-            </div>
-
-            <div class="exh-img-col">
-                <img src="images/four.jpg">
-                <div class="layer">
-                    <h3>FOUR QUARTETS</h3>
-                </div>
-            </div>
-
-            <div class="exh-img-col">
-                <img src="images/flag.jpg">
-                <div class="layer">
-                    <h3>PUT OUT MORE FLAGS</h3>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Extra  Exhibition Features -->
     <section class="extra">
-        <h1>More</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat labore possimus doloremque numquam ipsa
-            praesentium modi porro alias adipisci obcaecati unde ipsam tenetur laboriosam sit necessitatibus, sint ex.
-            Et, at?</p>
+        <div class="exh-row">
+            <div class="extra-col">
+                <img src="images/CanadianDeclaration.png" height="300px">
+                <h3>Canadian Declaration of War on Germany</h3>
+                <p>A recommendation for a declaration of war by Canada on Nazi Germany was announced in a speech made by
+                    Canadian Prime Minister William Lyon Mackenzie King on 3 September 1939. Though Mackenzie King
+                    was in Ottawa at the time of his speech, it was broadcast over the radio. There was also a Canadian
+                    announcement in the Canadian newspaper, the Canada Gazette. The declaration of war was made on 10
+                    September 1939, just 7 days after the United Kingdom and France declared war.</p>
+            </div>
 
+            <div class="extra-col">
+                <img src="images/BerlinDeclaration.png" height="300px">
+                <h3>Berlin Declaration</h3>
+                <p>The Berlin Declaration of 5 June 1945,[n 1] had the governments of the United States, the Soviet
+                    Union, the United Kingdom and France, acting on behalf of the Allies of World War II, jointly assume
+                    "supreme authority" over German territory and asserted the legitimacy of their joint determination
+                    of issues regarding its administration and boundaries prior to the forthcoming Potsdam Conference.
+                </p>
+            </div>
+
+            <div class="extra-col">
+                <img src="images/ItalianDeclaration.png" height="300px">
+                <h3>Italian Declaration of War on the United States</h3>
+                <p>On December 11, 1941, Italy declared war on the United States in response to the latter's declaration
+                    of war upon the Empire of Japan following the attack on Pearl Harbor four days earlier. Germany also
+                    declared war on the U.S. the same day. The US immediately responded by declaring war on Germany and
+                    Italy, thus thrusting the United States in fighting two major fronts across the Pacific and Atlantic
+                    Oceans in World War II.</p>
+            </div>
+        </div>
         <div class="exh-row">
             <div class="extra-col">
                 <img src="images/instrument.jpg">
                 <h3>Instrument of Surrender</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
+                <p>The Pakistani Instrument of Surrender was a written agreement that enabled the surrender of 93,000
+                    soldiers of the Pakistan Armed Forces Eastern Command on 16 December 1971, thereby ending the
+                    Bangladesh Liberation War and the creation of the nation of Bangladesh.</p>
             </div>
 
             <div class="extra-col">
                 <img src="images/ration.jpg">
                 <h3>National Ration Book</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
+                <p>Every American was issued a series of ration books during the war. The ration books contained
+                    removable stamps good for certain rationed items, like sugar, meat, cooking oil, and canned goods. A
+                    person could not buy a rationed item without also giving the grocer the right ration stamp.</p>
             </div>
 
             <div class="extra-col">
                 <img src="images/telegram.jpg">
                 <h3>Fake Telegrams</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
+                <p>The Zimmermann Telegram was a secret diplomatic communication
+                    issued from the German Foreign Office in January 1917 that proposed a military alliance between
+                    Germany and Mexico if the United States entered World War I against Germany. Mexico would recover
+                    Texas, Arizona, and New Mexico. The telegram was intercepted and decoded by British intelligence.
+                </p>
             </div>
         </div>
     </section>
