--- a/film_and_music.html
+++ b/film_and_music.html
@@ -52,6 +52,15 @@
         <h1>Films and Music</h1>
     </section>
 
+
+    <!-- Virtual Tour -->
+    <section class="map-responsive">
+        <h1>Tour</h1>
+        <p>A virtual view inside a vessel from the war</p>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1630496928253!6m8!1m7!1sCAoSLEFGMVFpcE52TjBXSjB0TTQ3cS1oYVREZjBfTTFrZVlDMzhyeHJwQWR1cVhz!2m2!1d29.9416266!2d-90.070842!3f208.64445231729223!4f-9.634051989895326!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </section>
+
     <!-- Exhibition Content -->
     <section class="items">
         <h1>Films</h1>
