--- a/prominent_leaders.html
+++ b/prominent_leaders.html
@@ -52,8 +52,18 @@
         <h1>Prominent Leaders</h1>
     </section>
 
+    <!-- Virtual Tour -->
+    <section class="map-responsive">
+        <h1>Tour</h1>
+        <p>A view of the military of the time</p>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1630497254744!6m8!1m7!1sCAoSLEFGMVFpcE5nS0hVckZ3NjNLaGJqZ2N1ZXJNRDZoM0NGUXVLNkJWSDdiS3JI!2m2!1d29.9431049!2d-90.07032439999999!3f0!4f0!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </section>
+
     <!-- Exhibition Content -->
     <section class="items">
+        <h1>Portraits of Leaders</h1>
+
         <div class="exh-row">
             <div class="exh-col">
                 <h2>James Doolittle</h2>
