--- a/art_and_sculptures.html
+++ b/art_and_sculptures.html
@@ -52,63 +52,60 @@
         <h1>Art and Sculptures</h1>
     </section>
 
+    <!-- Virtual Tour -->
+    <section class="map-responsive">
+        <h1>Tour</h1>
+        <p>Remnants from the war</p>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1630497472178!6m8!1m7!1sCAoSLEFGMVFpcE9iQ04yd01qTlJWZVVDUHVqZHh3bWhrQVNlZ25laU13OElGUFhB!2m2!1d29.9428321!2d-90.0705335!3f127.07018350547828!4f-4.135016468614253!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </section>
+
     <!-- Exhibition Content -->
     <section class="items">
         <h1>Items</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ea, esse cupiditate, sapiente modi ducimus
-            accusamus quisquam provident eligendi rerum corporis sequi facere atque obcaecati ipsam dolorem ut nesciunt
-            et?</p>
+        <p>During World War II, the relations between art and war can be articulated around two main issues. First, art found itself at the centre of an ideological war. Second, during World War II, many artists found themselves in the most difficult conditions and their works are a testimony to a powerful "urge to create." </p>
 
         <div class="exh-row">
             <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
+                <h3>Background</h3>
+                <p>.Throughout history, most representations of war depict military achievements and often show significant battle scenes. However, in the 19th century a “turn” in the visual representation of war became noticeable. </p>
             </div>
 
             <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
+                <h3>Examples</h3>
+                <p>Artists started to show the disastrous aspects of war, instead of its glorified events and protagonists.Such a perspective is best exemplified by Francisco Goya's series, The Disasters of War (1810-1820), and Otto Dix's portfolio, Der Krieg (published in 1924).</p>
             </div>
 
             <div class="exh-col">
-                <h3>Items</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque consequatur dolorum
-                    repudiandae aut tenetur harum maxime, ab nobis! Harum porro quia placeat adipisci accusantium dolor
-                    voluptatum impedit laborum neque.</p>
+                <h3>More</h3>
+                <p>During World War II, both traditions are present. For instance, Paul Nash's Battle of Britain represents a scene of aerial combat between British and German fighters. However, André Fougeron's Street of Paris focuses on the impact of war on civilians.</p>
             </div>
         </div>
     </section>
 
     <!-- Exhibtion Images -->
     <section class="exh-img">
-        <h1>Exhibitions</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat assumenda sit ipsa labore sapiente ullam vel
-            iure eos molestias, incidunt cum quasi eligendi? Odio quis excepturi, obcaecati asperiores quam accusantium!
-        </p>
+        <h1>Memorials</h1>
 
         <div class="exh-row">
             <div class="exh-img-col">
-                <img src="images/anne.jpg">
+                <img src="images/memorial1.jpg">
                 <div class="layer">
-                    <h3>ANNE FRANK'S DIARY</h3>
+                    <h3>THE MOTHERLAND CALLS</h3>
                 </div>
             </div>
 
             <div class="exh-img-col">
-                <img src="images/four.jpg">
+                <img src="images/memorial2.jpg">
                 <div class="layer">
-                    <h3>FOUR QUARTETS</h3>
+                    <h3>ALYOSHA MONUMENT, PLOVDIV</h3>
                 </div>
             </div>
 
             <div class="exh-img-col">
-                <img src="images/flag.jpg">
+                <img src="images/memorial3.jpg">
                 <div class="layer">
-                    <h3>PUT OUT MORE FLAGS</h3>
+                    <h3>POLISH FORCES WAR MEMORIAL</h3>
                 </div>
             </div>
         </div>
@@ -116,34 +113,25 @@
 
     <!-- Extra  Exhibition Features -->
     <section class="extra">
-        <h1>More</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat labore possimus doloremque numquam ipsa
-            praesentium modi porro alias adipisci obcaecati unde ipsam tenetur laboriosam sit necessitatibus, sint ex.
-            Et, at?</p>
+        <h1>Art</h1>
 
         <div class="exh-row">
             <div class="extra-col">
-                <img src="images/instrument.jpg">
-                <h3>Instrument of Surrender</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
+                <img src="images/alan-moore.jpg">
+                <h3>Blind Man in Belsen by Alan Moore</h3>
+                <p>Australian war artist Alan Moore painted this scene of the victims of the Bergen-Belsen concentration camp after its liberation. This painting provides a clear view into the horrors of war.</p>
             </div>
 
             <div class="extra-col">
-                <img src="images/ration.jpg">
-                <h3>National Ration Book</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
+                <img src="images/ls-lowry.jpg">
+                <h3>Blitzen Site by LS Lowry</h3>
+                <p>LS Lowry was working as a fire-watcher in Manchester where he would rush down to the burning buildings and paint the scene as it was still burning or smoking. He depicted the realities of war.</p>
             </div>
 
             <div class="extra-col">
-                <img src="images/telegram.jpg">
-                <h3>Fake Telegrams</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit dolores libero quam voluptas,
-                    nesciunt vel ullam doloribus iure eveniet est sint ratione debitis, consequuntur, rerum hic quidem
-                    voluptatibus? Dignissimos, eligendi.</p>
+                <img src="images/graham-sutherland.jpg">
+                <h3>The City by Graham Sutherland</h3>
+                <p>Graham Sutherland was a wartime artist who painted this scene of what use to be a tall building in London. The painting shows the war-time destruction.</p>
             </div>
         </div>
     </section>
