--- a/important_documents.html
+++ b/important_documents.html
@@ -54,6 +54,8 @@
 
     <!-- Virtual Tour -->
     <section class="map-responsive">
+        <h1>Tour</h1>
+        <p>Propoganda from the war</p>
         <iframe
             src="https://www.google.com/maps/embed?pb=!4v1630292668275!6m8!1m7!1sCAoSLEFGMVFpcE5SZTBST1FoLURwMHFtSzY0ZzVTbkt0MGFQeGhXZzJVNXhWY3VT!2m2!1d29.9431497!2d-90.0703166!3f194.96785!4f17.10611!5f0.7820865974627469"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -61,6 +63,8 @@
 
     <!-- Extra  Exhibition Features -->
     <section class="extra">
+        <h1>Archives</h1>
+
         <div class="exh-row">
             <div class="extra-col">
                 <img src="images/CanadianDeclaration.png" height="300px">
