--- a/index.html
+++ b/index.html
@@ -65,40 +65,62 @@
 		<div class="row1">
 			<div class="exhibition-col1">
 				<img src="images/Books.png">
-				<div class="layer1">
-					<h3>BOOKS</h3>
-				</div>
-				<p>The outbreak of war in 1939, as in 1914, brought to an end an era of great intellectual and creative exuberance. The rationing of paper affected the production of magazines and books. Discover more about this unique period in world literature! </p>
+				<a href="books.html">
+					<div class="layer1">
+						<h3>BOOKS</h3>
+
+					</div>
+				</a>
+				<p>The outbreak of war in 1939, as in 1914, brought to an end an era of great intellectual and
+					creative
+					exuberance. The rationing of paper affected the production of magazines and books. Discover more
+					about this unique period in world literature! </p>
 			</div>
 			<div class="exhibition-col1">
 				<img src="images/Films&Musics.png">
-				<div class="layer1">
-					<h3>FILMS AND MUSIC</h3>
-				</div>
-				<p>During World War II, the entertainment industry changed to help the war effort. It became more closely controlled by national governments, who sought to keep spirits high and to depict the war in a positive light. They also used entertainment media to keep citizens informed. Discover more about this unique period in entertainment media!</p>
+				<a href="film_and_music.html">
+					<div class="layer1">
+						<h3>FILMS AND MUSIC</h3>
+					</div>
+				</a>
+				<p>During World War II, the entertainment industry changed to help the war effort. It became more
+					closely controlled by national governments, who sought to keep spirits high and to depict the war in
+					a positive light. They also used entertainment media to keep citizens informed. Discover more about
+					this unique period in entertainment media!</p>
 			</div>
 			<div class="exhibition-col1">
 				<img src="images/ImportantPapers&Documents.png">
-				<div class="layer1">
-					<h3>IMPORTANT DOCUMENTS</h3>
-				</div>
-				<p>Official documents from World War II offer a glimpse into the political landscape, societal structures, and economic turmoil of the time. Ration cards, memos, declarations of war, treaties, plans, wills and more! Discover it all here at the archives of the World War II Museum! </p>
+				<a href="important_documents.html">
+					<div class="layer1">
+						<h3>IMPORTANT DOCUMENTS</h3>
+					</div>
+				</a>
+				<p>Official documents from World War II offer a glimpse into the political landscape, societal
+					structures, and economic turmoil of the time. Ration cards, memos, declarations of war, treaties,
+					plans, wills and more! Discover it all here at the archives of the World War II Museum! </p>
 			</div>
 		</div>
 		<div class="row2">
 			<div class="exhibition-col2">
 				<img src="images/ProminentLeaders.png">
-				<div class="layer2">
-					<h3>PROMINENT LEADERS</h3>
-				</div>
-				<p>Learn more about the leaders who shaped this era and get a glance at some prominent faces. The World War II Museum's collection stands unparalleled!</p>
+				<a href="prominent_leaders.html">
+					<div class="layer2">
+						<h3>PROMINENT LEADERS</h3>
+					</div>
+				</a>
+				<p>Learn more about the leaders who shaped this era and get a glance at some prominent faces. The World
+					War II Museum's collection stands unparalleled!</p>
 			</div>
 			<div class="exhibition-col2">
 				<img src="images/memorial.jpg">
-				<div class="layer2">
-					<h3>ART AND SCULPTURES</h3>
-				</div>
-				<p>During World War II, many artists found themselves in the most difficult conditions, and their works are a testimony to a powerful "urge to create." Sculptures too came up often as a tribute to fallen soldiers from the war and an ode to the nation.</p>
+				<a href="art_and_sculptures.html">
+					<div class="layer2">
+						<h3>ART AND SCULPTURES</h3>
+					</div>
+				</a>
+				<p>During World War II, many artists found themselves in the most difficult conditions, and their works
+					are a testimony to a powerful "urge to create." Sculptures too came up often as a tribute to fallen
+					soldiers from the war and an ode to the nation.</p>
 			</div>
 		</div>
 		</div>
@@ -113,7 +135,9 @@
 			<div class="testimonial-col">
 				<img src="images/User1.png">
 				<div>
-					<p>Museum is simply incredible. So much to see and do, and so immersive. This can easily be far longer than just a one day experience. Great atmosphere, great food, great service, and reasonably priced.</p>
+					<p>Museum is simply incredible. So much to see and do, and so immersive. This can easily be far
+						longer than just a one day experience. Great atmosphere, great food, great service, and
+						reasonably priced.</p>
 					<h3>Aman Singh</h3>
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
@@ -125,7 +149,9 @@
 			<div class="testimonial-col">
 				<img src="images/User1.png">
 				<div>
-					<p>This is not only a museum but an experience. It’s the most complete WWII museum I’ve ever seen. The exhibits are in gorgeous condition and I’m honestly amazed at the amount of items, videos, and overall history that is showcased.</p>
+					<p>This is not only a museum but an experience. It’s the most complete WWII museum I’ve ever seen.
+						The exhibits are in gorgeous condition and I’m honestly amazed at the amount of items, videos,
+						and overall history that is showcased.</p>
 					<h3>Reena Agarwal</h3>
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star"></i>
