--- a/Website/about.html
+++ b/Website/about.html
@@ -37,7 +37,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="tour.html">TOUR</a>
                         <ul>
-                            <li><a href="books.html">Books</a></li>
+                            <li><a href="books.html">Books and Poetry</a></li>
                             <li><a href="film_and_music.html">Films and Music</a></li>
                             <li><a href="important_documents.html">Important Documents</a></li>
                             <li><a href="prominent_leaders.html">Prominent leaders</a></li>
@@ -57,7 +57,9 @@
         <div class="row">
             <div class="about-col">
                 <h1>World's Largest World War II Museum</h1>
-                <p>Travelling back in time has never been easier! We make learning about World War II history possible from the comfort of your home. Take a 360 degree tour of our exhibits, read and view our collections on books, music, film and so much more!</p>
+                <p>Travelling back in time has never been easier! We make learning about World War II history possible
+                    from the comfort of your home. Take a 360 degree tour of our exhibits, read and view our collections
+                    on books, music, film and so much more!</p>
                 <a href="tour.html" class="btn1 red-btn">EXPLORE NOW</a>
             </div>
             <div class="aboul-col">
@@ -70,8 +72,8 @@
     <section class="footer">
         <h4>About Us</h4>
         <p>We at the World War II Museum aim at bringing the knowledge and experiences of the books,
-			<br>
-			music, films, art, documents and more of World War II right to your home!
+            <br>
+            music, films, art, documents and more of World War II right to your home!
         </p>
         <div class="icons">
             <i class="fab fa-facebook-f"></i>
@@ -84,14 +86,14 @@
 
     <!-- Menu Toggle -->
     <script>
-		var navLinks = document.getElementById("navLinks");
-		function showMenu() {
-			navLinks.style.right = "0";
-		}
-		function hideMenu() {
-			navLinks.style.right = "-200px";
-		}
-	</script>
+        var navLinks = document.getElementById("navLinks");
+        function showMenu() {
+            navLinks.style.right = "0";
+        }
+        function hideMenu() {
+            navLinks.style.right = "-200px";
+        }
+    </script>
 </body>
 
 </html>
