--- a/Website/books.html
+++ b/Website/books.html
@@ -37,7 +37,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="tour.html">TOUR</a>
                         <ul>
-                            <li><a href="books.html">Books</a></li>
+                            <li><a href="books.html">Books and Poetry</a></li>
                             <li><a href="film_and_music.html">Films and Music</a></li>
                             <li><a href="important_documents.html">Important Documents</a></li>
                             <li><a href="prominent_leaders.html">Prominent leaders</a></li>
@@ -57,7 +57,9 @@
         <h1>Tour</h1>
         <p>A virtual view inside the war</p>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!4v1630472226144!6m8!1m7!1sCAoSLEFGMVFpcFBQUWRRck5iWV9vZUhxZmUzb3BlSXNHd3RGTy14SWg1cG1wWEhw!2m2!1d29.9426564!2d-90.07038899999999!3f195.19647320021375!4f-0.7337496372651486!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!4v1630472226144!6m8!1m7!1sCAoSLEFGMVFpcFBQUWRRck5iWV9vZUhxZmUzb3BlSXNHd3RGTy14SWg1cG1wWEhw!2m2!1d29.9426564!2d-90.07038899999999!3f195.19647320021375!4f-0.7337496372651486!5f0.7820865974627469"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
     <!-- Exhibition Content -->
@@ -68,17 +70,23 @@
         <div class="exh-row">
             <div class="exh-col">
                 <h3>Evolution</h3>
-                <p>The outbreak of war in 1939, as in 1914, brought to an end an era of great intellectual and creative exuberance. Individuals were dispersed; the rationing of paper affected the production of magazines and books.</p>
+                <p>The outbreak of war in 1939, as in 1914, brought to an end an era of great intellectual and creative
+                    exuberance. Individuals were dispersed; the rationing of paper affected the production of magazines
+                    and books.</p>
             </div>
 
             <div class="exh-col">
                 <h3>Limitations</h3>
-                <p>The poem and the short story, convenient forms for men under arms, became the favoured means of literary expression. It was hardly a time for new beginnings, although the poets of the New Apocalypse movement produced three anthologies (1940–45) inspired by Neoromantic anarchism.</p>
+                <p>The poem and the short story, convenient forms for men under arms, became the favoured means of
+                    literary expression. It was hardly a time for new beginnings, although the poets of the New
+                    Apocalypse movement produced three anthologies (1940–45) inspired by Neoromantic anarchism.</p>
             </div>
 
             <div class="exh-col">
                 <h3>Coming Through</h3>
-                <p>No important new novelists or playwrights appeared. In fact, the best fiction about wartime was produced by established writers. Only three new poets (all of whom died on active service) showed promise.</p>
+                <p>No important new novelists or playwrights appeared. In fact, the best fiction about wartime was
+                    produced by established writers. Only three new poets (all of whom died on active service) showed
+                    promise.</p>
             </div>
         </div>
     </section>
@@ -86,7 +94,7 @@
     <!-- Exhibtion Images -->
     <section class="exh-img">
         <h1>Featured</h1>
-        <p>Notable works featured from the era of the war 
+        <p>Notable works featured from the era of the war
         </p>
 
         <div class="exh-row">
@@ -122,19 +130,26 @@
             <div class="extra-col">
                 <img src="images/caught.jpg">
                 <h3>Caught by Henry Green</h3>
-                <p>Caught is largely based on Henry Green’s experiences, from 1939 through Christmas, 1940, as a member of London’s Auxiliary Fire Service. Caught was published in 1942, when the war’s outcome was uncertain. Like many of Green’s novels, it deals with class, but at its heart, it is the story of the different ways in which lives and minds can come undone.</p>
+                <p>Caught is largely based on Henry Green’s experiences, from 1939 through Christmas, 1940, as a member
+                    of London’s Auxiliary Fire Service. Caught was published in 1942, when the war’s outcome was
+                    uncertain. Like many of Green’s novels, it deals with class, but at its heart, it is the story of
+                    the different ways in which lives and minds can come undone.</p>
             </div>
 
             <div class="extra-col">
                 <img src="images/no-directions.png">
                 <h3>No Directions by James Hanley</h3>
-                <p>Hanley published, in 1943, No Directions, which is set during the London Blitz, a work that has been commented on by several literary critics. He later re-used this novel, to form the middle section of A Dream Journey (1976). Hanley had initially planned on turning No Directions into a trilogy.</p>
+                <p>Hanley published, in 1943, No Directions, which is set during the London Blitz, a work that has been
+                    commented on by several literary critics. He later re-used this novel, to form the middle section of
+                    A Dream Journey (1976). Hanley had initially planned on turning No Directions into a trilogy.</p>
             </div>
 
             <div class="extra-col">
                 <img src="images/the slaves of solitude.png">
                 <h3>The Slaves of Solitude by Patrick Hamilton</h3>
-                <p>The Slaves of Solitude was published in 1947.It has been described as 'one of the best novels about the second world war' by David Lodge.The Slaves of Solitude is set in Thames Lockdon during World War Two; and is centred around a boarding house, the Rosamund Tea Rooms. </p>
+                <p>The Slaves of Solitude was published in 1947.It has been described as 'one of the best novels about
+                    the second world war' by David Lodge.The Slaves of Solitude is set in Thames Lockdon during World
+                    War Two; and is centred around a boarding house, the Rosamund Tea Rooms. </p>
             </div>
         </div>
     </section>
@@ -143,8 +158,8 @@
     <section class="footer">
         <h4>About Us</h4>
         <p>We at the World War II Museum aim at bringing the knowledge and experiences of the books,
-			<br>
-			music, films, art, documents and more of World War II right to your home!
+            <br>
+            music, films, art, documents and more of World War II right to your home!
         </p>
         <div class="icons">
             <i class="fab fa-facebook-f"></i>
