--- a/Website/film_and_music.html
+++ b/Website/film_and_music.html
@@ -127,7 +127,7 @@
         <div class="exh-row">
             <div class="exh-col">
                 <h3>At Mail Call Today - Gene Autry</h3>
-                <audio controls autoplay>
+                <audio controls>
                     <source src="images/GeneAutry.mp3" type="audio/mp3">
                 </audio>
                 <p>There was nothing better for a lonely soldier than a mail call, and there was nothing worse than one
@@ -136,7 +136,7 @@
 
             <div class="exh-col">
                 <h3>There's a Star Spangled Banner Waving Somewhere - Elton Britt</h3>
-                <audio controls autoplay>
+                <audio controls>
                     <source src="images/EltonBritt.mp3" type="audio/mp3">
                 </audio>
                 <p>Elton Britt's song was the biggest country music hit of the era, selling over one million copies.
@@ -151,7 +151,7 @@
 
             <div class="exh-col">
                 <h3>There's a Gold Star in Her Window - Tex Ritter</h3>
-                <audio controls autoplay>
+                <audio controls>
                     <source src="images/TexRitter.mp3" type="audio/mp3">
                 </audio>
                 <p>John Ritter's dad was a successful actor in singing cowboy pictures and had a big hit with this
